@@ -1,4 +1,4 @@
-.TH LH_TESTROOT 1 "2007\-08\-20" "1.0~a24" "live\-helper"
+.TH LH_TESTROOT 1 "2007\-08\-27" "1.0~a25" "live\-helper"
 
 .SH NAME
 lh_testroot \- ensure that a system is built as root
